apps/ntfy/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ntfy.licht.moe`)
      services:
        - name: ntfy
          port: http
  tls:
    secretName: ntfy-tls
